--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,34 +1,20 @@
-name: Deploy to GitHub Pages
-
-on:
-  push:
-    branches:
-      - main  # Change this if your branch is different
-
-permissions:
-  contents: read
-  pages: write
-  id-token: write
-
 jobs:
+  # Single deploy job no building
   deploy:
-    runs-on: ubuntu-latest
     environment:
       name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
-
+      url: ${{steps.deployment.outputs.page_url}}
+    runs-on: ubuntu-latest
     steps:
-      - name: Checkout Repository
+      - name: Checkout
         uses: actions/checkout@v4
-
       - name: Setup Pages
-        uses: actions/configure-pages@v3
-
-      - name: Upload Files to GitHub Pages
-        uses: actions/upload-pages-artifact@v2
+        uses: actions/configure-pages@v5
+      - name: Upload Artifact
+        uses: actions/upload-pages-artifact@v3
         with:
+          # upload entire directory
           path: /home/ubuntuws/github-pages/public
-
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
