--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,7 +24,7 @@ jobs:
       - name: Upload Files to GitHub Pages
         uses: actions/upload-pages-artifact@v3
         with:
-          path: github-pages/public
+          path:  .
 
       - name: Deploy to GitHub Pages
         uses: actions/deploy-pages@v2
