Fix GitHub Pages deployment workflow

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,6 +12,9 @@ permissions:
 
 jobs:
   deploy:
+    environment:
+      name: github-pages
+      url: ${{steps.deployment.outputs.page_url}}
     runs-on: ubuntu-latest
 
     steps:
@@ -19,9 +22,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Setup Pages
-        uses: actions/configure-pages@v3
-        with:
-          enablement: true
+        uses: actions/configure-pages@v5
 
       - name: Upload Files to GitHub Pages
         uses: actions/upload-pages-artifact@v3
@@ -29,4 +30,5 @@ jobs:
           path:  .
 
       - name: Deploy to GitHub Pages
-        uses: actions/deploy-pages@v2
+        id: deployment
+        uses: actions/deploy-pages@v4
