--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Upload Files to GitHub Pages
         uses: actions/upload-pages-artifact@v3
         with:
-          path:  .
+          path: public
 
       - name: Deploy to GitHub Pages
         id: deployment
