--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,6 +8,9 @@ on:
 jobs:
   deploy:
     runs-on: ubuntu-latest
+     
+    permissions:
+      contents: write
 
     steps:
     # Step 1: Checkout the repository
@@ -18,6 +21,6 @@ jobs:
     - name: Deploy to GitHub Pages
       uses: JamesIves/github-pages-deploy-action@v4
       with:
-        branch: gh-pages  # The branch where GitHub Pages will be published
+        branch: main  # The branch where GitHub Pages will be published
         folder: public  # The folder to deploy (can be a subfolder if you have a build process, e.g., 'dist')
         token: ${{ secrets.GITHUB_TOKEN }}  # GitHub token automatically created for the repository
