--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,7 @@ name: Deploy to GitHub Pages
 on:
   push:
     branches:
-      - main  # Trigger the workflow when changes are pushed to the 'main' branch
+      - deploy  # Trigger the workflow when changes are pushed to the 'main' branch
 
 jobs:
   deploy:
@@ -13,14 +13,14 @@ jobs:
       contents: write
 
     steps:
-    # Step 1: Checkout the repository
+    
     - name: Checkout repository
       uses: actions/checkout@v3
 
-    # Step 2: Deploy to GitHub Pages (using the 'gh-pages' branch)
+    
     - name: Deploy to GitHub Pages
       uses: JamesIves/github-pages-deploy-action@v4
       with:
-        branch: main  # The branch where GitHub Pages will be published
-        folder: public  # The folder to deploy (can be a subfolder if you have a build process, e.g., 'dist')
-        token: ${{ secrets.GITHUB_TOKEN }}  # GitHub token automatically created for the repository
+        branch: deploy  
+        folder: public  
+        token: ${{ secrets.GITHUB_TOKEN }}  
